// Vitest Snapshot v1

exports[`Button > should render an icon button 1`] = `
<DocumentFragment>
  <button
    class="bg-transparent inline-flex items-center rounded-lg text-sm text-gray-400 m-2"
    title="title"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="h-6 w-6 text-red-600"
      fill="none"
      stroke="currentColor"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126zM12 15.75h.007v.008H12v-.008z"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`Button > should render none button 1`] = `
<DocumentFragment>
  <button
    class=" "
    type="button"
  >
    none
  </button>
</DocumentFragment>
`;

exports[`Button > should render primary button 1`] = `
<DocumentFragment>
  <button
    class="rounded-lg font-medium text-base text-center px-5 py-2.5 text-white bg-blue-700 hover:bg-blue-800 "
    type="button"
  >
    primary
  </button>
</DocumentFragment>
`;

exports[`Button > should render secondary button 1`] = `
<DocumentFragment>
  <button
    class="rounded-lg font-medium text-base text-center px-5 py-2.5 text-gray bg-gray-200 hover:bg-gray-300 "
    type="button"
  >
    secondary
  </button>
</DocumentFragment>
`;

exports[`Button > should render tertiary button 1`] = `
<DocumentFragment>
  <button
    class="rounded-lg font-medium text-base text-center px-5 py-2.5 text-white bg-green-500 hover:bg-green-600 "
    type="button"
  >
    tertiary
  </button>
</DocumentFragment>
`;

exports[`Button > should render warning button 1`] = `
<DocumentFragment>
  <button
    class="rounded-lg font-medium text-base text-center px-5 py-2.5 text-white bg-red-700 hover:bg-red-800 "
    type="button"
  >
    warning
  </button>
</DocumentFragment>
`;
